// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should load the stored bookmark from local storage and present it visibly within the list 1`] = `
<ul
  aria-label="bookmark.list.label"
  class="spatial-bookmark-list chakra-list__root css-1q4ghp7"
  role="listbox"
>
  <li
    aria-label="bookmark.ariaLabel"
    class="spatial-bookmarks-item chakra-list__item css-843j6g"
    role="option"
    tabindex="0"
  >
    <div
      class="css-v3qtod"
    >
      <div
        class="css-d82rsv"
      >
        <svg
          aria-hidden="true"
          class="chakra-icon css-1qiwd9j"
          fill="none"
          focusable="false"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.106 5.553a2 2 0 0 0 1.788 0l3.659-1.83A1 1 0 0 1 21 4.619v12.764a1 1 0 0 1-.553.894l-4.553 2.277a2 2 0 0 1-1.788 0l-4.212-2.106a2 2 0 0 0-1.788 0l-3.659 1.83A1 1 0 0 1 3 19.381V6.618a1 1 0 0 1 .553-.894l4.553-2.277a2 2 0 0 1 1.788 0z"
          />
          <path
            d="M15 5.764v15"
          />
          <path
            d="M9 3.236v15"
          />
        </svg>
      </div>
      <p
        class="css-29in21"
      >
        Test
      </p>
      <div
        class="css-xsawf1"
      />
      <button
        aria-label="bookmark.button.deleteOne.ariaLabel"
        class="chakra-button chakra-tooltip__trigger spatial-bookmarks-item-delete css-ljrkvq"
        data-part="trigger"
        data-scope="tooltip"
        data-state="closed"
        dir="ltr"
        id="tooltip:«r0»:trigger"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="chakra-icon css-1qiwd9j"
          fill="none"
          focusable="false"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 6h18"
          />
          <path
            d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
          />
          <path
            d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
          />
        </svg>
      </button>
    </div>
  </li>
</ul>
`;

exports[`should only delete all bookmarks after the user confirms the action. 1`] = `
<div
  class="chakra-alert__root css-jwwdmt"
  role="alert"
>
  <span
    class="css-13gnd3a"
  >
    <svg
      class="css-126y6n1"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20ZM11 15H13V17H11V15ZM11 7H13V13H11V7Z"
      />
    </svg>
  </span>
  <div
    class="chakra-alert__title css-1jeznpc"
  >
    bookmark.alert.delete
  </div>
</div>
`;

exports[`should only delete all bookmarks after the user confirms the action. 2`] = `
<div
  class="chakra-alert__title css-1jeznpc"
>
  bookmark.alert.noSaved
</div>
`;

exports[`should remove bookmark from the list by clicking the remove button 1`] = `
<div
  class="chakra-alert__title css-1jeznpc"
>
  bookmark.alert.noSaved
</div>
`;

exports[`should shown an alert message if no bookmarks are saved 1`] = `
<div
  class="chakra-alert__root css-1owmyes"
  role="alert"
>
  <span
    class="css-13gnd3a"
  >
    <svg
      class="css-1g7m1fs"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20ZM11 7H13V9H11V7ZM11 11H13V17H11V11Z"
      />
    </svg>
  </span>
  <div
    class="chakra-alert__title css-1jeznpc"
  >
    bookmark.alert.noSaved
  </div>
</div>
`;
